refactor: replace locations with building across schema and frontend/backend